--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,6 @@
   <name>form_data_persistence_with_java_servlets_docker Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -67,10 +61,11 @@
       <version>6.2.5.Final</version>
     </dependency>
 
-    <!--Test containers-->
+    <!--Test containers junit-->
     <dependency>
       <groupId>org.testcontainers</groupId>
-      <artifactId>testcontainers</artifactId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.20.6</version>
       <scope>test</scope>
     </dependency>
 
@@ -81,6 +76,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!--Mockito to mock requests-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.14.2</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
